--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
   <h1 id="titulo" class="text-2xl md:text-3xl font-bold mb-4 text-center">Harry Potter e a Pedra Filosofal</h1>
 
   <div class="w-full max-w-6xl aspect-video mb-6">
-    <iframe id="player" class="w-full h-full rounded-lg shadow-lg" src="https://superembeds.com/embed2/tt0241527" allowfullscreen></iframe>
+    <iframe id="player"
+            class="w-full h-full rounded-lg shadow-lg"
+            src="https://superembeds.com/embed2/tt0241527"
+            allowfullscreen
+            referrerpolicy="no-referrer">
+    </iframe>
   </div>
 
   <div class="flex gap-4 mb-6">
