--- a/index.html
+++ b/index.html
@@ -51,6 +51,24 @@
       <li><button onclick="irPara('tt0413267', 'Shrek Terceiro (2007)')" class="bg-green-700 hover:bg-green-600 w-full py-2 rounded">Shrek 3</button></li>
       <li><button onclick="irPara('tt0892791', 'Shrek Para Sempre (2010)')" class="bg-green-700 hover:bg-green-600 w-full py-2 rounded">Shrek 4</button></li>
     </ul>
+
+    <h2 class="text-xl font-semibold mb-2 text-center">Clássicos Disney</h2>
+    <ul class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-2 text-center mb-6">
+      <li><button onclick="irPara('tt0029583', 'Branca de Neve e os Sete Anões (1937)')" class="bg-blue-700 hover:bg-blue-600 w-full py-2 rounded">Branca de Neve</button></li>
+      <li><button onclick="irPara('tt0032455', 'Pinóquio (1940)')" class="bg-blue-700 hover:bg-blue-600 w-full py-2 rounded">Pinóquio</button></li>
+      <li><button onclick="irPara('tt0033563', 'Fantasia (1940)')" class="bg-blue-700 hover:bg-blue-600 w-full py-2 rounded">Fantasia</button></li>
+      <li><button onclick="irPara('tt0032910', 'Dumbo (1941)')" class="bg-blue-700 hover:bg-blue-600 w-full py-2 rounded">Dumbo</button></li>
+      <li><button onclick="irPara('tt0034492', 'Bambi (1942)')" class="bg-blue-700 hover:bg-blue-600 w-full py-2 rounded">Bambi</button></li>
+      <li><button onclick="irPara('tt0042332', 'Cinderela (1950)')" class="bg-blue-700 hover:bg-blue-600 w-full py-2 rounded">Cinderela</button></li>
+      <li><button onclick="irPara('tt0043265', 'Alice no País das Maravilhas (1951)')" class="bg-blue-700 hover:bg-blue-600 w-full py-2 rounded">Alice</button></li>
+      <li><button onclick="irPara('tt0046183', 'Peter Pan (1953)')" class="bg-blue-700 hover:bg-blue-600 w-full py-2 rounded">Peter Pan</button></li>
+      <li><button onclick="irPara('tt0058331', 'Mogli: O Menino Lobo (1967)')" class="bg-blue-700 hover:bg-blue-600 w-full py-2 rounded">Mogli</button></li>
+      <li><button onclick="irPara('tt0110357', 'O Rei Leão (1994)')" class="bg-blue-700 hover:bg-blue-600 w-full py-2 rounded">Rei Leão</button></li>
+      <li><button onclick="irPara('tt0120915', 'Tarzan (1999)')" class="bg-blue-700 hover:bg-blue-600 w-full py-2 rounded">Tarzan</button></li>
+      <li><button onclick="irPara('tt0120762', 'Mulan (1998)')" class="bg-blue-700 hover:bg-blue-600 w-full py-2 rounded">Mulan</button></li>
+      <li><button onclick="irPara('tt0103639', 'Aladdin (1992)')" class="bg-blue-700 hover:bg-blue-600 w-full py-2 rounded">Aladdin</button></li>
+      <li><button onclick="irPara('tt2294629', 'Frozen: Uma Aventura Congelante (2013)')" class="bg-blue-700 hover:bg-blue-600 w-full py-2 rounded">Frozen</button></li>
+    </ul>
   </div>
 
   <script>
