--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
 
     <h2 class="text-xl font-semibold mb-2 text-center">Toy Story & Shrek</h2>
     <ul class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-2 text-center mb-6">
-      <li><button onclick="irPara('tt0114709', 'Toy Story (1995)')" class="bg-yellow-600 hover:bg-yellow-500 w-full py-2 rounded">Toy Story</button></li>
-      <li><button onclick="irPara('tt0120363', 'Toy Story 2 (1999)')" class="bg-yellow-600 hover:bg-yellow-500 w-full py-2 rounded">Toy Story 2</button></li>
-      <li><button onclick="irPara('tt0435761', 'Toy Story 3 (2010)')" class="bg-yellow-600 hover:bg-yellow-500 w-full py-2 rounded">Toy Story 3</button></li>
-      <li><button onclick="irPara('tt1979376', 'Toy Story 4 (2019)')" class="bg-yellow-600 hover:bg-yellow-500 w-full py-2 rounded">Toy Story 4</button></li>
+      <li><button onclick="irParaUrl('https://archive.org/download/toystoryclassicmovie-dubcollection/Toy%20Story%201%20%281995%29%20Dublado.mp4', 'Toy Story (1995)')" class="bg-yellow-600 hover:bg-yellow-500 w-full py-2 rounded">Toy Story</button></li>
+      <li><button onclick="irParaUrl('https://archive.org/download/toystoryclassicmovie-dubcollection/Toy%20Story%202%20%281999%29%20Dublado.mp4', 'Toy Story 2 (1999)')" class="bg-yellow-600 hover:bg-yellow-500 w-full py-2 rounded">Toy Story 2</button></li>
+      <li><button onclick="irParaUrl('https://archive.org/download/toystoryclassicmovie-dubcollection/Toy%20Story%203%20%282010%29%20Dublado.mp4', 'Toy Story 3 (2010)')" class="bg-yellow-600 hover:bg-yellow-500 w-full py-2 rounded">Toy Story 3</button></li>
+      <li><button onclick="irParaUrl('https://archive.org/download/toystoryclassicmovie-dubcollection/Toy%20Story%204%20%282019%29%20Dublado.mp4', 'Toy Story 4 (2019)')" class="bg-yellow-600 hover:bg-yellow-500 w-full py-2 rounded">Toy Story 4</button></li>
       <li><button onclick="irPara('tt0126029', 'Shrek (2001)')" class="bg-green-700 hover:bg-green-600 w-full py-2 rounded">Shrek</button></li>
       <li><button onclick="irPara('tt0298148', 'Shrek 2 (2004)')" class="bg-green-700 hover:bg-green-600 w-full py-2 rounded">Shrek 2</button></li>
       <li><button onclick="irPara('tt0413267', 'Shrek Terceiro (2007)')" class="bg-green-700 hover:bg-green-600 w-full py-2 rounded">Shrek 3</button></li>
